[gd_scene load_steps=8 format=2]

[ext_resource path="res://Graphics/title/Sonic_Worlds_Next_Logo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level/Title.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Items/Rings/Ring.tres" type="Texture" id=3]
[ext_resource path="res://Scripts/Misc/TextDisplay.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Fonts/small_font.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackCog:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "TitleAssemble"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Next:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -65, 163 ), Vector2( -65, 163 ), Vector2( 223, 163 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sonic:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 411, 98 ), Vector2( 411, 98 ), Vector2( 191, 98 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Worlds:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -130, 125 ), Vector2( -130, 125 ), Vector2( 175, 125 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Worlds/Arrow1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 78.8056, 0 ), Vector2( 78.8056, 0 ), Vector2( 95, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Worlds/Arrow2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 75.8055, 0 ), Vector2( 75.8055, 0 ), Vector2( 107, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Worlds/Arrow3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1.1 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 64.8055, 0 ), Vector2( 64.8055, 0 ), Vector2( 117, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BigCog:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -64, 108 ), Vector2( -64, 108 ), Vector2( 84, 108 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BackCog:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 156, -39 ), Vector2( 156, -39 ), Vector2( 156, 72 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/Cover:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3, 1.4 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 1,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:speed")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cover/Back:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.3, 1.4, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CanvasLayer/Labels:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 2048.0, 0.0 ],
"_edit_vertical_guides_": [ 10400.0 ]
}

[node name="BackCog" type="Sprite" parent="."]
position = Vector2( 156, -39 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 114, 21, 52, 54 )

[node name="BigCog" type="Sprite" parent="."]
position = Vector2( -64, 108 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 97, 97 )

[node name="CogCircle" type="Sprite" parent="BigCog"]
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 24, 24, 48, 48 )

[node name="World" type="Sprite" parent="BigCog/CogCircle"]
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 181, 29, 39, 38 )

[node name="Worlds" type="Sprite" parent="."]
position = Vector2( -130, 125 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 173, 182, 36 )

[node name="Arrow1" type="Sprite" parent="Worlds"]
position = Vector2( 78.8056, 0 )
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 190, 173, 17, 36 )

[node name="Arrow2" type="Sprite" parent="Worlds"]
position = Vector2( 75.8055, 0 )
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 214, 173, 15, 36 )

[node name="Arrow3" type="Sprite" parent="Worlds"]
position = Vector2( 64.8055, 0 )
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 235, 173, 12, 36 )

[node name="Sonic" type="Sprite" parent="."]
position = Vector2( 411, 98 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 150, 107, 140, 38 )

[node name="Cog" type="Sprite" parent="Sonic"]
position = Vector2( -24, 0 )
rotation = 0.271425
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 243, 37, 21, 22 )

[node name="Next" type="Sprite" parent="."]
position = Vector2( -65, 163 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 142, 235, 128, 33 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Back" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cover" type="ColorRect" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 0, 70 )
color = Color( 0.533333, 0.533333, 0.533333, 1 )

[node name="Labels" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Version" type="Label" parent="CanvasLayer/Labels"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 65.0
text = "v1.1.2"

[node name="Date" type="Label" parent="CanvasLayer/Labels"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -14.0
text = "2021-2023"

[node name="PressStart" type="Control" parent="CanvasLayer/Labels"]
modulate = Color( 1, 0.831373, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Labels/PressStart"]
texture = ExtResource( 5 )
hframes = 10
vframes = 4
region_enabled = true
script = ExtResource( 4 )
string = "PRESS START"
smallStringTexture = ExtResource( 5 )
hasNumbers = true
hAlign = 1

[node name="Cover" type="CanvasLayer" parent="."]
layer = 0

[node name="Back" type="ColorRect" parent="Cover"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="TitleAnimate" type="AnimationPlayer" parent="."]
autoplay = "TitleAssemble"
anims/RESET = SubResource( 2 )
anims/TitleAssemble = SubResource( 1 )

[node name="Celebrations" type="CPUParticles2D" parent="."]
position = Vector2( 152, 112 )
emitting = false
amount = 32
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 128, 96 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 300 )
initial_velocity = 90.0
initial_velocity_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
